<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Engineer Work</string>
    <string name="title_section1">Normal</string>
    <string name="title_section2">Satellite</string>
    <string name="title_section3">Hybrid</string>
    <string name="title_section4">Terrain</string>
    <string name="title_section5">Distable Blue Dot</string>
    <string name="title_section6">Nearby Places</string>
    <string name="title_section7">Remove Nearby Places</string>
    <string name="title_section8">Direction</string>
    <string name="title_section9">Remove Direction</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_my_place">My Place</string>
    <string name="action_settings">Settings</string>
    <string name="gps_enabled">GPS is enabled</string>
    <string name="gps_distabled">GPS is not enabled</string>
    <string name="net_enabled">Internet Connection is enabled</string>
    <string name="net_distabled">Internet Connection is not enabled. It will be needed to display updates of Map.</string>
    <string name="action_my_start">My Start</string>
    <string name="curr_position">Current Position</string>
    <string name="meet_place">Meeting Place</string>
    <string name="on_question">Do you want to turn it on?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="new_point">Add Point</string>
    <string name="friends_point">Add Friend Position</string>
    <string name="title_activity_new_point">Add New Point Panel</string>
    <string name="input_place">Input address/geopoint</string>
	<string name="save">Save Place</string>
	<string name="done_adding_places">Done Adding Places</string>
	<string name="remove_all_places">Remove All Markers</string>
	<string name="not_saved_changes">You didnt save Friends Places</string>
	<string name="start_pos_is_set">Yours start position is now set to: </string>
	<string name="start_pos_is_not_set">Yours start position cannot be establish</string>	
	<string name="cannot_dir">Cannot draw direction</string>
	<string name="route">Downloading route information</string>
	
</resources>
