<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.maciejmalak.engineerwork.MainActivity" >

    <item
        android:id="@+id/action_my_place"
        android:title="@string/action_my_place"
        app:showAsAction="withText|ifRoom"/>
    <item
        android:id="@+id/action_my_start"
        android:orderInCategory="100"
        android:title="@string/action_my_start"
        app:showAsAction="never"/>
    <item
        android:id="@+id/meet_place"
        android:orderInCategory="100"
        android:title="@string/meet_place"
        app:showAsAction="never"/>
    <item
        android:id="@+id/new_point"
        android:orderInCategory="100"
        android:title="@string/new_point"
        app:showAsAction="never"/>
    <item
        android:id="@+id/remove_all_places"
        android:orderInCategory="100"
        android:title="@string/remove_all_places"
        app:showAsAction="never"/>

</menu>
